# shader_engine_v000

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt
cmake/: copy_compile_commands.cmake  rebuild.cmake
include/: renderer.h
src/: main.cpp  renderer.cpp
